--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-DBstring=mongodb+srv://manichandhan:lLWshOVDDTedyTGQ@cluster0.1rxawmd.mongodb.net/?retryWrites=true&w=majority
+DBstring=mongodb+srv://manichandhan:lLWshOVDDTedyTGQ@cluster0.1rxawmd.mongodb.net/blogposts
