--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api's for blogpost",
   "main": "app.js",
   "scripts": {
-   "start":"nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "manichandhankumar",
   "license": "ISC",
@@ -14,7 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
